--- a/src/app/home/slider/slider.component.html
+++ b/src/app/home/slider/slider.component.html
@@ -1,5 +1,5 @@
-<div class="slides" *ngIf="slides?.length > 0">
-  <div *ngFor="let slide of sortSlides('sort'); let i = index; trackBy: trackByFn" [ngClass]="{
+<div class="slides" *ngIf="slides?.length > 0" (wheel)="onScroll($event)">
+  <div *ngFor="let slide of slidesSorted; let i = index; trackBy: trackByFn" [ngClass]="{
       hidden: currentSlide !== i,
       fullscreen: slide.fullscreen,
       hidetime: slide.hidetime
@@ -28,4 +28,16 @@
       </div>
     </div>
   </div>
+
+
+
+  <div *ngFor="let foreground of foregroundsSorted; let i = index; trackBy: trackByFn" class="foreground"
+    [style.zoom]="foreground.scale" [ngStyle]="{'left.px': foreground.y || 0, 'top.px': foreground.x || 0}"
+    [style.transform]="'translate(' + foreground.x + 'px, ' + foreground.y + ', 0px)'" cdkDrag
+    (cdkDragStarted)="dragStarted(foreground.id)" (cdkDragReleased)="dragEnded($event)"
+    (cdkDragMoved)="dragMoved($event, foreground.id)">
+    <img [src]="foreground.downloadURL" />
+  </div>
+
+
 </div>
