--- a/src/app/home/slider/slider.component.scss
+++ b/src/app/home/slider/slider.component.scss
@@ -1,4 +1,5 @@
-* {
+:host {
+  position: relative;
   font-family: Candara, 'Times New Roman', serif;
 }
 
@@ -66,5 +67,16 @@
       margin: 25px;
       padding: 15px;
     }
+  }
+}
+
+.foreground {
+  position: absolute;
+  z-index: 999;
+
+  :active {
+    background: rgba(8, 177, 107, 0.425);
+    border: 5px solid rgba(0, 0, 0, 0.178);
+    margin: -5px;
   }
 }
