--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,15 +11,13 @@ app-root {
 body {
   margin: 0;
   padding: 0;
-  font-family: Roboto, "Helvetica Neue", sans-serif;
+  font-family: Roboto, 'Helvetica Neue', sans-serif;
 }
-
 
 button .mat-icon {
   vertical-align: middle !important;
 }
 
-
-.hidetime:not(.hidden)~.datetime {
+.hidetime:not(.hidden) ~ .datetime {
   visibility: hidden;
 }
