--- a/src/app/home/slider/slider.component.scss
+++ b/src/app/home/slider/slider.component.scss
@@ -1,6 +1,6 @@
 :host {
   position: relative;
-  font-family: Candara, "Times New Roman", serif;
+  font-family: Roboto, sans-serif;
 }
 
 .slides {
@@ -33,39 +33,63 @@
     }
   }
 
-  .datetime {
+  .flights-info {
     z-index: 999;
     position: absolute;
     bottom: 0;
-    background: #00000080;
     border-radius: 10px;
     border-bottom-left-radius: 0;
     border-bottom-right-radius: 0;
     color: white;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    font-weight: bold;
-    text-shadow: 4px 3px 0px #000;
     width: 56.25vw;
+    display: flex;
+    flex-direction: column;
 
-    .time {
-      font-size: 10vh;
+    h2 {
+      color: #f7f8ca;
+      font-size: 3.5vh;
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      padding: 15px 0;
+      background: rgba(129, 55, 55, 0.7);
+      margin: 0;
     }
 
-    .dates {
+    .info-wrapper {
+      color: #f7f8ca;
+      background: rgba(121, 45, 45, 0.9);
       display: flex;
-      flex-direction: column;
+      padding: 15px 15px 0;
 
-      .date {
-        margin: 10px;
-        font-size: 4vh;
+      .info {
+        flex: 1;
+
+        h3 {
+          font-weight: 400;
+          margin: 0;
+        }
       }
     }
 
-    > * {
-      margin: 25px;
+    .flights {
+      color: #f7f8ca;
+      background: rgba(121, 45, 45, 0.9);
       padding: 15px;
+      display: flex;
+      flex-direction: column;
+      font-weight: 300;
+
+      .flight {
+        width: 100%;
+        display: flex;
+        font-size: 2vh;
+        margin-bottom: 10px;
+
+        .info {
+          flex: 1;
+        }
+      }
     }
   }
 }
