--- a/src/app/admin/slides-list/slides-list.component.html
+++ b/src/app/admin/slides-list/slides-list.component.html
@@ -5,20 +5,59 @@
     <span *ngIf="saved === false" style="color: red">Идёт сохранение...</span>
   </div>
 
-  <div cdkDropList class="example-list" (cdkDropListDropped)="drop($event)" *ngIf="list">
-    <app-slide class="example-box" *ngFor="let slide of sortBy('sort'); trackBy: trackByFn" cdkDrag [slide]="slide"
-      @delete>
+  <div
+    cdkDropList
+    class="example-list"
+    (cdkDropListDropped)="drop($event)"
+    *ngIf="list"
+  >
+    <app-slide
+      class="example-box"
+      *ngFor="let slide of sortBy('sort'); trackBy: trackByFn"
+      cdkDrag
+      [slide]="slide"
+      @delete
+    >
       <div class="example-custom-placeholder" *cdkDragPlaceholder></div>
 
-      <mat-icon *ngIf="list.length > 1" cdkDragHandle matTooltip="Перетащите для сортировки" matTooltipPosition="above"
-        class="handle">drag_handle</mat-icon>
+      <mat-icon
+        *ngIf="list.length > 1"
+        cdkDragHandle
+        matTooltip="Перетащите для сортировки"
+        matTooltipPosition="above"
+        class="handle"
+        >drag_handle</mat-icon
+      >
 
       <ng-container [ngSwitch]="slide.type">
         <ng-template [ngSwitchCase]="'image'">
           <img *cdkDragPreview [src]="slide.downloadURL" [alt]="slide.name" />
         </ng-template>
         <ng-template [ngSwitchCase]="'video'">
-          <video *cdkDragPreview [src]="slide.downloadURL" loop autoplay [muted]="true"></video>
+          <video
+            *cdkDragPreview
+            [src]="slide.downloadURL"
+            loop
+            autoplay
+            [muted]="true"
+          ></video>
+        </ng-template>
+        <ng-template [ngSwitchCase]="'youtube'">
+          <iframe
+            *cdkDragPreview
+            frameborder="0"
+            allowfullscreen="1"
+            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+            title="YouTube video player"
+            width="640"
+            height="360"
+            [src]="
+              'https://www.youtube.com/embed/' +
+                slide.youtubeId +
+                '?autoplay=1&amp;cc_load_policy=0&amp;controls=0&amp;disablekb=1&amp;enablejsapi=1&amp;fs=0&amp;iv_load_policy=3&amp;loop=1&amp;modestbranding=1&amp;rel=0&amp;mute=1&amp;widgetid=1'
+                | safe: 'resourceUrl'
+            "
+          ></iframe>
         </ng-template>
       </ng-container>
     </app-slide>
