--- a/src/app/admin/uploader/upload-task/upload-task.component.html
+++ b/src/app/admin/uploader/upload-task/upload-task.component.html
@@ -1,55 +1,43 @@
-<div class="wrapper" (mouseover)="hover=true" (mouseleave)="hover=false" [class.zoomed]="zoomed">
-  <img *ngIf="isImage && localUrl" [src]="localUrl | safe: 'url'" [class.loading]="isLoading">
+<div
+  class="wrapper"
+  (mouseover)="hover = true"
+  (mouseleave)="hover = false"
+  [class.zoomed]="zoomed"
+>
+  <img
+    *ngIf="isImage && localUrl"
+    [src]="localUrl | safe: 'url'"
+    [class.loading]="isLoading"
+  />
 
-  <video *ngIf="isVideo && localUrl" autoplay loop [muted]="isMuted" [src]="localUrl | safe: 'url'"
-    [class.loading]="isLoading"></video>
+  <video
+    *ngIf="isVideo && localUrl"
+    autoplay
+    loop
+    [muted]="isMuted"
+    [src]="localUrl | safe: 'url'"
+    [class.loading]="isLoading"
+  ></video>
 
   <div class="overlay" [hidden]="!hover">
-    <div class="controls" *ngIf="(snapshot | async) as snap">
-      <a download mat-icon-button *ngIf="downloadURL" [href]="downloadURL" target="_blank" matTooltip="Скачать"
-        matTooltipPosition="above">
+    <div class="controls" *ngIf="snapshot | async as snap">
+      <a
+        download
+        mat-icon-button
+        *ngIf="downloadURL"
+        [href]="downloadURL"
+        target="_blank"
+        matTooltip="Скачать"
+        matTooltipPosition="above"
+      >
         <mat-icon style="color: white">cloud_download</mat-icon>
       </a>
-
-      <!--  <app-holdable-delete (deleted)="onDelete($event)"></app-holdable-delete> -->
     </div>
   </div>
 </div>
 <div class="meta">
-  <p class="file-name">{{ filename }}<span class="ext">.{{ fileExt }}</span></p>
+  <p class="file-name">
+    {{ filename }}<span class="ext">.{{ fileExt }}</span>
+  </p>
   <app-progress-bar *ngIf="percent" [value]="percent"></app-progress-bar>
 </div>
-
-
-
-<!-- <div class="wrapper" (mouseover)="hover=true" (mouseleave)="hover=false" [class.zoomed]="zoomed">
-  <img *ngIf="isImage && localUrl" [src]="localUrl | safe: 'url'" [class.loading]="isLoading">
-  <video *ngIf="isVideo && localUrl" autoplay loop [muted]="isMuted" [src]="localUrl | safe: 'url'"
-    [class.loading]="isLoading"></video>
-  <img *ngIf="!isImage && !isVideo" src="assets/file.svg" style="object-fit: contain;" [class.loading]="isLoading">
-
-  <div class="overlay" [hidden]="!hover">
-    <div class="controls" *ngIf="(snapshot | async) as snap">
-      <a download mat-icon-button *ngIf="downloadURL | async as url" [href]="url" target="_blank">
-        <mat-icon style="color: white">cloud_download</mat-icon>
-      </a>
-
-      <button mat-icon-button *ngIf="isVideo || isImage" (click)="toggleZoom()">
-        <mat-icon *ngIf="!zoomed" style="color: white">zoom_in</mat-icon>
-        <mat-icon *ngIf="zoomed" style="color: white">zoom_out</mat-icon>
-      </button>
-
-      <button mat-icon-button *ngIf="isVideo" (click)="isMuted = !isMuted">
-        <mat-icon *ngIf="!isMuted" style="color: white">volume_up</mat-icon>
-        <mat-icon *ngIf="isMuted" style="color: white">volume_off</mat-icon>
-      </button>
-
-      <app-holdable-delete (deleted)="delete($event)"></app-holdable-delete>
-
-    </div>
-  </div>
-</div>
-<div class="meta" *ngIf="!zoomed">
-  <p class="file-name">{{ filename }}<span class="ext">.{{ fileExt }}</span></p>
-  <app-progress-bar *ngIf="percent" [value]="percent"></app-progress-bar>
-</div> -->
