--- a/src/app/home/slider/slider.component.html
+++ b/src/app/home/slider/slider.component.html
@@ -31,6 +31,23 @@
           [muted]="true"
         ></video>
       </ng-template>
+      <ng-template [ngSwitchCase]="'youtube'">
+        <iframe
+          frameborder="0"
+          allowfullscreen="1"
+          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+          [src]="
+            currentSlide === i || currentSlide + 1 === i
+              ? ('https://www.youtube.com/embed/' +
+                  slide.youtubeId +
+                  '?autoplay=1&amp;loop=1&amp;showinfo=0&amp;playlist=' +
+                  slide.youtubeId +
+                  '&amp;cc_load_policy=0&amp;controls=0&amp;disablekb=1&amp;enablejsapi=1&amp;fs=0&amp;iv_load_policy=3&amp;modestbranding=1&amp;rel=0&amp;mute=1&amp;widgetid=1'
+                | safe: 'resourceUrl')
+              : ''
+          "
+        ></iframe>
+      </ng-template>
     </ng-container>
   </div>
 
