--- a/src/app/home/slider/slider.component.scss
+++ b/src/app/home/slider/slider.component.scss
@@ -23,6 +23,11 @@
       object-fit: cover;
     }
 
+    iframe {
+      height: 100vh;
+      width: 100%;
+    }
+
     &.fullscreen:not(.hidden) {
       width: 100vw;
     }
@@ -54,13 +59,14 @@
       padding: 15px 0;
       background: rgba(129, 55, 55, 0.7);
       margin: 0;
+      font-weight: 500;
     }
 
     .info-wrapper {
       color: #f7f8ca;
       background: rgba(121, 45, 45, 0.9);
       display: flex;
-      padding: 15px 15px 0;
+      padding: 15px 40px 0;
 
       .info {
         flex: 1;
@@ -75,7 +81,7 @@
     .flights {
       color: #f7f8ca;
       background: rgba(121, 45, 45, 0.9);
-      padding: 15px;
+      padding: 15px 40px;
       display: flex;
       flex-direction: column;
       font-weight: 300;
