--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,10 +1,12 @@
 <ng-container *ngIf="slides$ | async as slides">
   <ng-container *ngIf="foregrounds$ | async as foregrounds">
-    <app-slider [slides]="slides" [foregrounds]="foregrounds"></app-slider>
+    <app-slider
+      [slides]="slides"
+      [foregrounds]="foregrounds"
+      (isFullscrenSlide)="isFullscrenSlide($event)"
+    ></app-slider>
   </ng-container>
 </ng-container>
-
-<app-info></app-info>
 
 <!-- <div class="foreground" [style.background-image]="'url(/assets/mini_smile.webp)'"></div>
 <div class="foreground" [style.background-image]="'url(/assets/maslenica_gif.gif)'"></div> -->
