--- a/src/app/home/slider/slider.component.scss
+++ b/src/app/home/slider/slider.component.scss
@@ -1,4 +1,7 @@
 :host {
+  display: flex;
+  width: 100%;
+  height: 100vh;
   position: relative;
   font-family: Roboto, sans-serif;
 }
@@ -10,11 +13,26 @@
 
   .slide {
     position: absolute;
-    opacity: 1;
-    transition: opacity 500ms linear;
     width: 56.25vw;
     max-height: 100vh;
     overflow: hidden;
+
+    &.active {
+      opacity: 1;
+      animation: 1s slidein linear;
+
+      @keyframes slidein {
+        from {
+          opacity: 0;
+          transform: translateX(-100%);
+        }
+
+        to {
+          opacity: 1;
+          transform: translateX(0);
+        }
+      }
+    }
 
     img,
     video {
@@ -33,8 +51,20 @@
     }
 
     &.hidden {
-      transition: opacity 1000ms linear;
+      animation: 1s slideout linear;
       opacity: 0;
+
+      @keyframes slideout {
+        from {
+          opacity: 1;
+          transform: translateX(0);
+        }
+
+        to {
+          transform: translateX(100%);
+          opacity: 0.5;
+        }
+      }
     }
   }
 
@@ -114,4 +144,11 @@
     width: 100%;
     height: auto;
   }
+}
+
+app-info {
+  z-index: 1;
+  display: block;
+  height: 100vh;
+  width: 43.75vw;
 }
