--- a/src/app/home/info/info.component.html
+++ b/src/app/home/info/info.component.html
@@ -76,7 +76,9 @@
     </ng-container>
   </div>
 
-  <div class="currency info-block" *ngIf="currency$ | async as currency">
+
+  <img src="/assets/logo_100let.svg"/>
+<!--   <div class="currency info-block" *ngIf="currency$ | async as currency">
     <h2>Центр. банк / Central bank</h2>
 
     <div class="values">
@@ -101,5 +103,5 @@
         <mat-icon class="down">arrow_drop_down</mat-icon>
       </ng-template>
     </div>
-  </div>
+  </div> -->
 </div>
