refactor: new versions update

--- a/src/app/home/info/info.component.html
+++ b/src/app/home/info/info.component.html
@@ -76,8 +76,10 @@
     </ng-container>
   </div>
 
+<div class="currency info-block">
+  <img src="/assets/logo_100let.svg" style="height: 80%;" />
+</div>
 
-  <img src="/assets/logo_100let.svg"/>
 <!--   <div class="currency info-block" *ngIf="currency$ | async as currency">
     <h2>Центр. банк / Central bank</h2>
 
