fix: return currencies

--- a/src/app/home/info/info.component.html
+++ b/src/app/home/info/info.component.html
@@ -75,12 +75,7 @@
       </div>
     </ng-container>
   </div>
-
-<div class="currency info-block">
-  <img src="/assets/logo_100let.svg" style="height: 80%;" />
-</div>
-
-<!--   <div class="currency info-block" *ngIf="currency$ | async as currency">
+  <div class="currency info-block" *ngIf="currency$ | async as currency">
     <h2>Центр. банк / Central bank</h2>
 
     <div class="values">
@@ -105,5 +100,5 @@
         <mat-icon class="down">arrow_drop_down</mat-icon>
       </ng-template>
     </div>
-  </div> -->
+  </div>
 </div>
